--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+/* 
+Variables 
+*/
 :root {
   --main-font-family: "Bodoni Moda", serif;
   --secondary-font-family: "Noto Sans Display", sans-serif;
@@ -7,6 +10,10 @@
   --dark-color: #390c0a;
   --white-color: #fff;
 }
+
+/*
+Common Styles
+*/
 
 * {
   margin: 0;
@@ -49,7 +56,6 @@ h2,
 h3,
 h4 {
   font-family: var(--main-font-family);
-  /* font-family: var(--secondary-font-family); */
 }
 
 .btn {
@@ -132,7 +138,9 @@ h4 {
   background-color: #708d81;
 }
 
-/* Navbar */
+/*
+ Navbar
+  */
 .hamburger-menu,
 .side-nav {
   display: none;
@@ -192,7 +200,9 @@ h4 {
   width: 100%;
 }
 
-/* Hero */
+/*
+ Hero 
+ */
 .hero {
   width: 100vw;
   height: 100vh;
@@ -279,7 +289,9 @@ h4 {
   }
 }
 
-/* Pick */
+/* 
+Pick
+ */
 .picked {
   width: 100%;
   height: auto;
@@ -381,9 +393,7 @@ h4 {
 }
 
 /* 
-
   Package Section
-
  */
 
 .package-section {
@@ -424,7 +434,6 @@ h4 {
   position: absolute;
   top: 0;
   left: 0;
-  /* backface-visibility: hidden; */
 }
 
 .package-front {
@@ -499,12 +508,13 @@ h4 {
   opacity: 1;
 }
 
-/* Featured Section */
+/* 
+Featured Section
+ */
 .feature {
   position: relative;
 }
 .featured-section {
-  /* padding: 4rem 0; */
   width: 100%;
   height: 40vh;
   display: flex;
@@ -773,7 +783,6 @@ Responsive
     right: 2rem;
     width: 2rem;
     height: 2rem;
-    /* height: 40%; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -871,7 +880,6 @@ Responsive
 
   .package-section {
     padding: 0;
-    /* height: 60vh; */
     height: auto;
   }
 
